# agentic-data-modeling

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
docs/: agent_graph.md  architecture.md
examples/data/ecommerce/: categories.csv  customers.csv  order_items.csv  orders.csv  products.csv
examples/data/saas_events/: events.json  subscriptions.csv  users.csv
examples/data/tours/: bookings.csv  customers.csv  guides.csv  tours.csv
examples/requirements/: ecommerce.md  saas_analytics.md  tours.md
src/agentic_data_modeling/: config.py  llm.py
src/agentic_data_modeling/agents/: dbt_generator.py  doc_generator.py  graph.py  modeler.py  profiler.py  quality_agent.py  router.py  state.py
src/agentic_data_modeling/cli/: app.py  callbacks.py  generate_cmd.py  model_cmd.py  profile_cmd.py  run_cmd.py
src/agentic_data_modeling/models/: artifacts.py  dbt.py  dimensional.py  quality.py  source.py
src/agentic_data_modeling/prompts/: dbt_generator.py  doc_generator.py  modeler.py  profiler.py  quality.py
src/agentic_data_modeling/renderers/: engine.py
src/agentic_data_modeling/renderers/templates/: dbt_intermediate.sql.j2  dbt_schema.yml.j2  dbt_sources.yml.j2  dbt_staging.sql.j2  ddl_duckdb.sql.j2  doc_markdown.md.j2  erd_mermaid.md.j2  quality_rules.yml.j2
src/agentic_data_modeling/tools/: codegen_tools.py  duckdb_tools.py  file_tools.py  modeling_tools.py  profiling_tools.py  quality_tools.py
src/agentic_data_modeling/ui/: app.py
src/agentic_data_modeling/ui/components/: artifact_viewer.py  erd_viewer.py  sidebar.py
src/agentic_data_modeling/ui/pages/: 1_Profile.py  2_Model.py  3_Generate.py  4_Explore.py
tests/: conftest.py
tests/integration/: test_cli.py  test_full_pipeline.py  test_modeler_agent.py  test_profiler_agent.py
tests/unit/: test_config.py  test_models.py  test_renderers.py  test_tools_codegen.py  test_tools_duckdb.py  test_tools_profiling.py
