[project]
name = "agentic-data-modeling"
version = "0.1.0"
description = "AI agents that automate dimensional data modeling end-to-end"
requires-python = ">=3.13"
dependencies = [
    "langgraph>=0.4",
    "langchain-anthropic>=0.3",
    "langchain-core>=0.3",
    "duckdb>=1.2",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "typer>=0.15",
    "rich>=13.9",
    "jinja2>=3.1",
    "streamlit>=1.41",
    "pyyaml>=6.0",
]

[project.scripts]
adm = "agentic_data_modeling.cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_data_modeling"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/agentic_data_modeling/ui/pages/*" = ["N999"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: requires API key"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
]
