[project]
name = "agentic-data-modeling"
version = "0.1.0"
description = "AI agents that automate dimensional data modeling end-to-end"
requires-python = ">=3.13, <3.14"
dependencies = [
    "langgraph~=1.1.2",
    "langchain-openai>=0.3.19",
    "langchain-ollama>=0.3.3",
    "langchain-core~=1.2.20",
    "duckdb~=1.5.0",
    "pydantic~=2.12.5",
    "pydantic-settings~=2.13.1",
    "typer~=0.24.1",
    "rich~=14.3.3",
    "jinja2~=3.1.6",
    "streamlit~=1.55.0",
    "pyyaml~=6.0.3",
]

[project.scripts]
adm = "agentic_data_modeling.cli.app:app"

[build-system]
requires = ["hatchling~=1.29.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_data_modeling"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/agentic_data_modeling/ui/pages/*" = ["N999"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: requires API key"]

[dependency-groups]
dev = [
    "pytest~=9.0.2",
    "pytest-asyncio~=1.3.0",
    "ruff~=0.15.6",
    "mypy~=1.19.1",
    "pre-commit~=4.5.1",
]
